tests/baselines/reference/exportAssignmentMergedInterface.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
foo_1.ts(3,1): error TS2454: Variable 'x' is used before being assigned.
foo_1.ts(4,1): error TS2454: Variable 'x' is used before being assigned.
foo_1.ts(5,17): error TS2454: Variable 'x' is used before being assigned.
foo_1.ts(6,6): error TS2454: Variable 'x' is used before being assigned.
foo_1.ts(8,5): error TS2454: Variable 'x' is used before being assigned.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== foo_1.ts (5 errors) ====
    import foo = require("./foo_0");
    var x: foo;
    x("test");
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    x(42);
    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    var y: string = x.b;
                    ~
!!! error TS2454: Variable 'x' is used before being assigned.
    if(!!x.c){ }
         ~
!!! error TS2454: Variable 'x' is used before being assigned.
    var z = {x: 1, y: 2};
    z = x.d;
        ~
!!! error TS2454: Variable 'x' is used before being assigned.
==== foo_0.ts (0 errors) ====
    interface Foo {
    	(a: string): void;
    	b: string;
    }
    interface Foo {
    	(a: number): number;
    	c: boolean;
    	d: {x: number; y: number};
    }
    export = Foo;
    